@@ -38,5 +38,7 @@ shady-skin Revision History
 
 - Merged with shady_KISS
 - Fixed setupiconbar
+- Fixed scrollbars
+- Fixed heights in weatherforecast
 
 
